Fix name community to vi

--- a/macosx/com.ole.virtualboxboot.plist
+++ b/macosx/com.ole.virtualboxboot.plist
@@ -8,7 +8,7 @@
   <array>
     <string>/usr/local/bin/VBoxManage</string>
     <string>startvm</string>
-    <string>community</string>
+    <string>vi</string>
     <string>--type</string>
     <string>headless</string>
   </array>
